<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp">

            <LinearLayout
                android:id="@+id/layoutLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_item_detail"
                        android:layout_width="165dp"
                        android:layout_height="170dp"
                        android:layout_marginEnd="16dp"
                        android:src="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_item_title_detail"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                tools:text="@string/detail_title"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background= "@color/placeholder"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_title_detail"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:text="@string/detail_rating"
                                android:textSize="14sp"/>

                            <TextView
                                android:id="@+id/tv_item_rating_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_rating_detail"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:text="@string/detail_duration"
                                android:textSize="14sp"/>

                            <TextView
                                android:id="@+id/tv_item_duration_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_duration_detail"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:text="@string/detail_year"
                                android:textSize="14sp"/>

                            <TextView
                                android:id="@+id/tv_item_year_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_year_detail"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:text="@string/detail_genre"
                                android:textSize="14sp"/>

                            <TextView
                                android:id="@+id/tv_item_genre_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@id/tv_item_genre_detail"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:text="@string/detail_director"
                                android:textSize="14sp"/>

                            <TextView
                                android:id="@+id/tv_item_director_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:gravity="center"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/detail_description"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_item_description_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>