<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_selector"
        android:title="@string/menu_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/app_bar_switch"
        android:title="@string/dark_mode"
        android:checkable="true" />
</menu>